closes #99 additional code changes for JDK 1.8